--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "vue": "^3.0.2"
   },
   "devDependencies": {
+    "@vue/cli-plugin-typescript": "^4.5.0",
+    "@vue/compiler-sfc": "^3.0.2",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "typescript": "^4.1.2",
     "vite": "^1.0.0-rc.8",
-    "@vue/compiler-sfc": "^3.0.2"
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   }
 }
